--- a/CotrolPacientes/src/index.html
+++ b/CotrolPacientes/src/index.html
@@ -10,6 +10,10 @@
     <!-- fontawesome v5.0.6 -->
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 
+    <link rel="stylesheet" type="text/css" href="datatables/datatables.min.css"/>
+    <!--datables estilo bootstrap 4 CSS-->
+    <link rel="stylesheet"  type="text/css" href="datatables/DataTables-1.10.18/css/dataTables.bootstrap4.min.css">
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style media="screen">
 
@@ -20,5 +24,5 @@
 <body>
     <app-root></app-root>
 </body>
-
+</script>
 </html>
